<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboteq_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 RobotEQ Bridge</description>
  <maintainer email="marton@nowtech.hu">nilseuropa</maintainer>
  <license>Internal Use Only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>serial</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>serial</depend>
  </export>
</package>
